--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ts-node src/app.ts",
     "build": "tsc"
   },
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/epi-uditsingh/qp-assessment#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
@@ -38,10 +39,13 @@
     "@types/pg": "^8.11.0",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.37.0",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7"
   }
 }
