Optimize: Improved Docker configuration and optimized SQL queries for better performance.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-node_modules
-dist
+# Dependency directories
+node_modules/
+
+# Environment variables file
+.env
+
+# Editor-specific files
+.vscode/
+.idea/
+
+# Build output
+dist/
